--- a/public/contact.html
+++ b/public/contact.html
@@ -8,8 +8,12 @@
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
   <script>
     $(document).ready(function() {
-      // checkFields();
-      $("#send_email").click(function() {
+      $("#senderName" && "#address").change(function() {
+        $("#send_email").removeAttr("disabled");
+        console.log( "Handler for .change() called." );
+        });
+      $("#send_email").click(function(event) {
+        event.preventDefault();
         var name = $("#senderName").val().trim();
         var address = $("#address").val().trim();
         var text = $("#message").val().trim();
@@ -20,59 +24,17 @@
             text: text
             }, function(data) {
               if (data === "banana") {
-                // console.log("Hey!");
-                // alert("Great!");
                 $("#confirm").empty().html("Your email has been sent. Thank you for your interest!");
                 clearMessage();
               } else {
                 alert("Email not sent!");
               }
           });
-          // this is triggering error but also preventing page from adding /? at the end.
-        // $("#senderName").val("");
-        // $("#address").val("");
-        // $("#message").val("");
+        $("#senderName").val("");
+        $("#address").val("");
+        $("#message").val("");
       });
     });
-
-    // function checkFields() {
-    //   if (name.length !==0) {
-    //   $("#send_email").removeAttr("disabled");
-    //   console.log("testing");
-    //   }
-    // }
-
-
-    // $(document).ready(function() {
-    //   $("#send_email").click(function() {
-    //     // add some validation language here so only send if fields are not empty
-    //     var name = $("#senderName").val().trim();
-    //     var address = $("#address").val().trim();
-    //     var text = $("#message").val().trim();
-    //     $("#confirm").text("Sending email ... Please wait");
-    //       $.post("/sendemail", {
-    //         from: name,
-    //         address: address,
-    //         text: text
-    //         }, function(data) {
-    //           if (data === "banana") {
-    //             console.log("Hey!");
-    //             alert("Great!");
-    //             $("#confirm").empty().html("Your email has been sent. Thank you for your interest!");
-    //             clearMessage();
-    //           } else {
-    //             alert("Email not sent!");
-    //           }
-    //       });
-    //       // this is triggering error but also preventing page from adding /? at the end.
-    //     $("#senderName").val("");
-    //     $("#address").val("");
-    //     $("#message").val("");
-    //   });
-    // });
-
-    // Prevent form from submitting if 
-
 
     // User feedback
     function clearMessage() {
@@ -144,29 +106,24 @@
   <!-- MAIN CONTENT -->
   <div class="main-shell col-xs-12 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-2">
     <div class="main-content col-xs-12">
-      <div class="section-header">Contact
-      </div>
-      <!-- <div id="confirm"></div> -->
-      <form>
+      <div class="section-header">Contact</div>
+       <form>
         <div class="form-group">
             <label>Name</label>
-              <input type="text" required class="form-control" id="senderName" placeholder="Enter your name" />
+              <input type="text" class="form-control" id="senderName" placeholder="Enter your name" />
           </div>
           <div class="form-group">
             <label>Email</label>
-              <input type="email" required validate class="form-control" id="address" placeholder="your.email@gmail.com">
-          </div>
+              <input type="email" validate class="form-control" id="address" placeholder="your.email@gmail.com"></div>
           <div class="form-group">
             <label for="comment">Message</label>
              <div id="confirm"></div>
-              <textarea required class="form-control" id="message" rows="15">
-              </textarea>
+              <textarea class="form-control" id="message" rows="15"></textarea>
           </div>
           <div class="form-group">
-            <!-- <button id="send_email" type="submit" class="btn btn-default" disabled="disabled">Submit</button> -->
-            <button id="send_email" type="submit" class="btn btn-default">Submit</button>
+            <button id="send_email" type="submit" class="btn btn-default" disabled="disabled">Submit</button>
           </div>
-      </form>
+       </form>
     </div>
   </div> 
 
