adjusting for large screens

--- a/public/contact.html
+++ b/public/contact.html
@@ -104,7 +104,7 @@
   </div>
 
   <!-- MAIN CONTENT -->
-  <div class="main-shell col-xs-12 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-2">
+  <div class="main-shell col-xs-12 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1">
     <div class="main-content col-xs-12">
       <div class="section-header">Contact</div>
        <form>
@@ -128,7 +128,7 @@
   </div> 
 
   <!-- SIDEBAR, ALL SIZES BUT MEDIUM -->
-  <div class="panel container-fluid hidden-md col-xs-12 col-lg-4">
+  <div class="panel container-fluid hidden-md col-xs-12 col-lg-3 col-lg-offset-1">
     <div class="main-content col-xs-12">
       <div class="sidebar-header">Connect With Me</div>
         <a href="https://github.com/rpalmore" target="_blank"><img src="assets/images/github.png" alt="GitHub" width="60" height="60"></a>
