adding to portfolio, style updates

--- a/public/contact.html
+++ b/public/contact.html
@@ -4,7 +4,9 @@
   <title>Rebecca Palmore Portfolio</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link rel="stylesheet" href="/assets/css/font-awesome-4.7.0/css/font-awesome.css">
+  <link href="https://fonts.googleapis.com/css?family=Lobster|Lato:700" rel="stylesheet">  
+  <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
   <script>
     $(document).ready(function() {
@@ -131,18 +133,18 @@
   <div class="panel container-fluid hidden-md col-xs-12 col-lg-3 col-lg-offset-1">
     <div class="main-content col-xs-12">
       <div class="sidebar-header">Connect With Me</div>
-        <a href="https://github.com/rpalmore" target="_blank"><img src="assets/images/github.png" alt="GitHub" width="60" height="60"></a>
-        <a href="linkedin.com/in/rebecca-palmore" target="_blank"><img src="assets/images/linkedin.png" alt="LinkedIn" width="60" height="60"></a>
-        <a href="http://stackoverflow.com/users/7361075/rebecca-palmore" target="_blank"><img src="assets/images/stackoverflow.png" alt="stackoverflow" width="60" height="60"></a>
+        <a href="https://github.com/rpalmore" target="_blank"><img src="assets/images/logos/github.png" alt="GitHub" width="60" height="60"></a>
+        <a href="linkedin.com/in/rebecca-palmore" target="_blank"><img src="assets/images/logos/linkedin.png" alt="LinkedIn" width="60" height="60"></a>
+        <a href="http://stackoverflow.com/users/7361075/rebecca-palmore" target="_blank"><img src="assets/images/logos/stackoverflow.png" alt="stackoverflow" width="60" height="60"></a>
       </div>
     </div>
     <!-- SIDEBAR ONLY MEDIUM -->
     <div class="panel-medium container-fluid visible-md col-md-4 col-md-offset-0">
       <div class="main-content col-xs-12">
         <div class="sidebar-header">Connect With Me</div>
-          <a href="https://github.com/rpalmore" target="_blank"><img src="assets/images/github.png" alt="GitHub" width="60" height="60"></a>
-          <a href="https://linkedin.com/in/rebecca-palmore" target="_blank"><img src="assets/images/linkedin.png" alt="LinkedIn" width="60" height="60"></a>
-          <a href="https://stackoverflow.com/users/7361075/rebecca-palmore" target="_blank"><img src="assets/images/stackoverflow.png" alt="stackoverflow" width="60" height="60"></a>
+          <a href="https://github.com/rpalmore" target="_blank"><img src="assets/images/logos/github.png" alt="GitHub" width="60" height="60"></a>
+          <a href="https://linkedin.com/in/rebecca-palmore" target="_blank"><img src="assets/images/logos/linkedin.png" alt="LinkedIn" width="60" height="60"></a>
+          <a href="https://stackoverflow.com/users/7361075/rebecca-palmore" target="_blank"><img src="assets/images/logos/stackoverflow.png" alt="stackoverflow" width="60" height="60"></a>
         </div>
       </div>
   </div>
