--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
   <title>Rebecca Palmore Portfolio</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="/assets/css/font-awesome-4.7.0/css/font-awesome.css">
+  <link href="https://fonts.googleapis.com/css?family=Lobster|Lato:700" rel="stylesheet">  
   <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
 </head>
 <body>
@@ -68,15 +70,18 @@
     <div class="main-content col-xs-12">
       <div class="section-header">About Me</div>
       <img class="img-responsive" src="/assets/images/FB.jpg" alt="Rebecca and Tom">
+      <p><b><a href="/assets/resume/RebeccaPalmore_Resume.pdf" download><i class="fa fa-download fa-lg" aria-hidden="true"></i> Download my resume</a></b></p>
+      <hr />
       <p>Hi! I'm Rebecca. Thanks for checking out my portfolio. I've been a full-stack web developer since 2017, and a multimedia journalist and editor since 2002.</p>
 
       <p>Fast-paced newsrooms unwittingly prepared me for computer science, where focus, intense attention to detail and quick problem-solving skills are essential, and a curious mind is what powers that need to look under the hood to try and answer a question that dogs so many of us: <i>How does it work?</i></p>
 
-      <p>As a student of <a href="https://codingbootcamp.northwestern.edu/" target="_blank">web development at Northwestern University</a>, I’m continually learning how things work, from front-end design to server-side logic. Working with JavaScript and Node.js has been hugely challenging. But with each app or in-class activity, there is immense satisfaction. I’m excited to build on my skills.</p>
+      <p>As a student of <a href="https://codingbootcamp.northwestern.edu/" target="_blank">web development at Northwestern University</a>, I’m continually learning how things work, from front-end design to server-side logic. Working with React, Express, JavaScript and Node.js has been hugely challenging, but with each app or in-class activity, there is immense satisfaction. I’m excited to build on my skills.</p>
 
       <p>As a digital editor at <a href="http://wttw.com/chicagotonight" target="_blank">Chicago Tonight at WTTW-Channel 11</a>, I manage a small, driven team of reporters, produce compelling stories for digital platforms, edit and program a news website and — as many in my field do at all hours of the day and night — obsess over metrics.</p>
 
       <p>Here, you'll find class projects and homework from the 24-week full-stack web development program at Northwestern. I'll add new projects as I build them.</p>
+
     </div>
   </div>
 
@@ -84,18 +89,18 @@
   <div class="panel container-fluid hidden-md col-xs-12 col-lg-3 col-lg-offset-1">
     <div class="main-content col-xs-12">
       <div class="sidebar-header">Connect With Me</div>
-        <a href="https://github.com/rpalmore" target="_blank"><img src="/assets/images/github.png" alt="GitHub" width="60" height="60"></a>
-        <a href="linkedin.com/in/rebecca-palmore" target="_blank"><img src="/assets/images/linkedin.png" alt="LinkedIn" width="60" height="60"></a>
-        <a href="http://stackoverflow.com/users/7361075/rebecca-palmore" target="_blank"><img src="assets/images/stackoverflow.png" alt="stackoverflow" width="60" height="60"></a>
+        <a href="https://github.com/rpalmore" target="_blank"><img src="/assets/images/logos/github.png" alt="GitHub" width="60" height="60"></a>
+        <a href="linkedin.com/in/rebecca-palmore" target="_blank"><img src="/assets/images/logos/linkedin.png" alt="LinkedIn" width="60" height="60"></a>
+        <a href="http://stackoverflow.com/users/7361075/rebecca-palmore" target="_blank"><img src="assets/images/logos/stackoverflow.png" alt="stackoverflow" width="60" height="60"></a>
       </div>
     </div>
     <!-- SIDEBAR ONLY MEDIUM -->
     <div class="panel-medium container-fluid visible-md col-md-4 col-md-offset-0">
       <div class="main-content col-xs-12">
         <div class="sidebar-header">Connect With Me</div>
-          <a href="https://github.com/rpalmore" target="_blank"><img src="/assets/images/github.png" alt="GitHub" width="60" height="60"></a>
-          <a href="linkedin.com/in/rebecca-palmore" target="_blank"><img src="/assets/images/linkedin.png" alt="LinkedIn" width="60" height="60"></a>
-          <a href="http://stackoverflow.com/users/7361075/rebecca-palmore" target="_blank"><img src="/assets/images/stackoverflow.png" alt="stackoverflow" width="60" height="60"></a>
+          <a href="https://github.com/rpalmore" target="_blank"><img src="/assets/images/logos/github.png" alt="GitHub" width="60" height="60"></a>
+          <a href="linkedin.com/in/rebecca-palmore" target="_blank"><img src="/assets/images/logos/linkedin.png" alt="LinkedIn" width="60" height="60"></a>
+          <a href="http://stackoverflow.com/users/7361075/rebecca-palmore" target="_blank"><img src="/assets/images/logos/stackoverflow.png" alt="stackoverflow" width="60" height="60"></a>
         </div>
       </div>
   </div>
