--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <title>Rebecca Palmore Portfolio</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <title>Rebecca Palmore Portfolio</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="/assets/css/font-awesome-4.7.0/css/font-awesome.css">
+  <link href="https://fonts.googleapis.com/css?family=Lobster|Lato:700" rel="stylesheet">  
+  <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
 </head>
 <body>
 <!-- CONTAINER HOLDS ALL BODY CONTENT -->
@@ -72,6 +73,30 @@
             </div>
             <div class="row">
                 <div class="portfolio col-sm-6 col-md-12">
+                    <a href="https://plaudit.herokuapp.com/" target="_blank"><img class="projects" src="assets/images/plaudit.jpg" alt="Plaudit">
+                        <span>Plaudit</span>  
+                    </a>
+                </div>
+                <div class="portfolio col-sm-6 col-md-12">
+                    <a href="https://teambooklove.herokuapp.com/" target="_blank"><img class="projects" src="assets/images/booklove.png" alt="Book Love">
+                        <span>Book Love</span>
+                    </a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="portfolio col-sm-6 col-md-12">
+                    <a href="https://warm-shore-89552.herokuapp.com/" target="_blank"><img class="projects" src="assets/images/gladiator2.jpg" alt="Video Gladiators">
+                        <span>Video Gladiators</span>
+                    </a>
+                </div>
+                <div class="portfolio col-sm-6 col-md-12">
+                    <a href="https://arcane-lowlands-21801.herokuapp.com/" target="_blank"><img class="projects" src="assets/images/burger.jpg" alt="Burger App">
+                        <span>Burger App</span>
+                    </a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="portfolio col-sm-6 col-md-12">
                     <a href="https://boiling-wildwood-30671.herokuapp.com/" target="_blank"><img class="projects" src="assets/images/giphy2.jpg" alt="Giphy API">
                         <span>Giphy API</span>  
                     </a>
@@ -82,30 +107,6 @@
                     </a>
                 </div>
             </div>
-            <div class="row">
-                <div class="portfolio col-sm-6 col-md-12">
-                    <a href="https://shielded-sierra-62237.herokuapp.com/" target="_blank"><img class="projects" src="assets/images/hangman3.jpg" alt="Hangman">
-                        <span>Hangman</span>
-                    </a>
-                </div>
-                <div class="portfolio col-sm-6 col-md-12">
-                    <a href="https://arcane-lowlands-21801.herokuapp.com/" target="_blank"><img class="projects" src="assets/images/burger.jpg" alt="Rutgers Info Widget">
-                        <span>Burger App</span>
-                    </a>
-                </div>
-            </div>
-            <div class="row">
-                <div class="portfolio col-sm-6 col-md-12">
-                    <a href="#"><img class="projects" src="assets/images/gladiator2.jpg" alt="Rock Paper Scissors">
-                        <span>Video Gladiators</span>
-                    </a>
-                </div>
-                <div class="portfolio col-sm-6 col-md-12">
-                    <a href="https://powerful-castle-48513.herokuapp.com/" target="_blank"><img class="projects" src="assets/images/crystals2.jpg" alt="Rock Paper Scissors">
-                        <span>Crystal Collector</span>
-                    </a>
-                </div>
-            </div>
         </div>
     </div>
 
@@ -113,18 +114,18 @@
   <div class="panel container-fluid hidden-md col-xs-12 col-lg-3 col-lg-offset-1">
     <div class="main-content col-xs-12">
       <div class="sidebar-header">Connect With Me</div>
-        <a href="https://github.com/rpalmore" target="_blank"><img src="assets/images/github.png" alt="GitHub" width="60" height="60"></a>
-        <a href="linkedin.com/in/rebecca-palmore" target="_blank"><img src="assets/images/linkedin.png" alt="LinkedIn" width="60" height="60"></a>
-        <a href="http://stackoverflow.com/users/7361075/rebecca-palmore" target="_blank"><img src="assets/images/stackoverflow.png" alt="stackoverflow" width="60" height="60"></a>
+        <a href="https://github.com/rpalmore" target="_blank"><img src="assets/images/logos/github.png" alt="GitHub" width="60" height="60"></a>
+        <a href="linkedin.com/in/rebecca-palmore" target="_blank"><img src="assets/images/logos/linkedin.png" alt="LinkedIn" width="60" height="60"></a>
+        <a href="http://stackoverflow.com/users/7361075/rebecca-palmore" target="_blank"><img src="assets/images/logos/stackoverflow.png" alt="stackoverflow" width="60" height="60"></a>
       </div>
     </div>
     <!-- SIDEBAR ONLY MEDIUM -->
     <div class="panel-medium container-fluid visible-md col-md-4 col-md-offset-0">
       <div class="main-content col-xs-12">
         <div class="sidebar-header">Connect With Me</div>
-          <a href="https://github.com/rpalmore" target="_blank"><img src="assets/images/github.png" alt="GitHub" width="60" height="60"></a>
-          <a href="linkedin.com/in/rebecca-palmore" target="_blank"><img src="assets/images/linkedin.png" alt="LinkedIn" width="60" height="60"></a>
-          <a href="http://stackoverflow.com/users/7361075/rebecca-palmore" target="_blank"><img src="assets/images/stackoverflow.png" alt="stackoverflow" width="60" height="60"></a>
+          <a href="https://github.com/rpalmore" target="_blank"><img src="assets/images/logos/github.png" alt="GitHub" width="60" height="60"></a>
+          <a href="linkedin.com/in/rebecca-palmore" target="_blank"><img src="assets/images/logos/linkedin.png" alt="LinkedIn" width="60" height="60"></a>
+          <a href="http://stackoverflow.com/users/7361075/rebecca-palmore" target="_blank"><img src="assets/images/logos/stackoverflow.png" alt="stackoverflow" width="60" height="60"></a>
         </div>
       </div>
   </div>
@@ -138,6 +139,5 @@
     </div>
   </div>
 </div>
-<!-- <script src="server.js"></script> -->
 </body>
 </html>
