updating font style

--- a/public/index.html
+++ b/public/index.html
@@ -14,18 +14,18 @@
   <!-- HEADER -->
   <div class="row header">
     <!-- HEADER, MOBILE VIEW ONLY -->
-    <div class="name visible-xs col-sm-6">
-      <a href="/" id="name">
+    <a href="/" id="name">
+      <div class="name visible-xs col-sm-6">
         Rebecca Palmore
-      </a>
-    </div>
+      </div>
+    </a>
     <!-- HEADER, ADJUSTED FOR LARGER SCREENS -->
     <div class="visible-sm visible-md visible-lg col-sm-6 col-md-5 col-md-offset-1">
-      <div class="name col-sm-12 col-md-12">
-        <a href="/" id="name">
+      <a href="/" id="name">
+        <div class="name col-sm-12 col-md-12">
           Rebecca Palmore
-        </a>
-      </div>
+        </div>
+      </a>
     </div>
     <!-- SECONDARY NAV, MOBILE VIEW ONLY -->
     <div class="mobile-nav visible-xs col-xs-12">
@@ -70,7 +70,7 @@
     <div class="main-content col-xs-12">
       <div class="section-header">About Me</div>
       <img class="img-responsive" src="/assets/images/FB.jpg" alt="Rebecca and Tom">
-      <p><b><a href="/assets/resume/RebeccaPalmore_Resume.pdf" download><i class="fa fa-download fa-lg" aria-hidden="true"></i> Download my resume</a></b></p>
+      <p><b><a id="download" href="/assets/resume/RebeccaPalmore_Resume.pdf" download><i class="fa fa-download fa-lg" aria-hidden="true"></i> Download my resume</a></b></p>
       <hr />
       <p>Hi! I'm Rebecca. Thanks for checking out my portfolio. I've been a full-stack web developer since 2017, and a multimedia journalist and editor since 2002.</p>
 
