adjusting download, fonts

--- a/public/contact.html
+++ b/public/contact.html
@@ -116,7 +116,7 @@
           </div>
           <div class="form-group">
             <label>Email</label>
-              <input type="email" validate class="form-control" id="address" placeholder="your.email@gmail.com"></div>
+              <input type="email" validate class="form-control" id="address" placeholder="youremail@gmail.com"></div>
           <div class="form-group">
             <label for="comment">Message</label>
              <div id="confirm"></div>
