--- a/public/index.html
+++ b/public/index.html
@@ -70,15 +70,15 @@
     <div class="main-content col-xs-12">
       <div class="section-header">About Me</div>
       <img class="img-responsive" src="/assets/images/FB.jpg" alt="Rebecca and Tom">
-      <p><b><a id="download" href="/assets/resume/RebeccaPalmore_Resume.pdf" download><i class="fa fa-download fa-lg" aria-hidden="true"></i> Download my resume</a></b></p>
+      <p id="download"><b><a id="linkText" href="/assets/resume/RebeccaPalmore_Resume.pdf" download><i class="fa fa-download fa-lg" aria-hidden="true"></i> Download my resume</a></b></p>
       <hr />
       <p>Hi! I'm Rebecca. Thanks for checking out my portfolio. I've been a full-stack web developer since 2017, and a multimedia journalist and editor since 2002.</p>
 
       <p>Fast-paced newsrooms unwittingly prepared me for computer science, where focus, intense attention to detail and quick problem-solving skills are essential, and a curious mind is what powers that need to look under the hood to try and answer a question that dogs so many of us: <i>How does it work?</i></p>
 
-      <p>As a student of <a href="https://codingbootcamp.northwestern.edu/" target="_blank">web development at Northwestern University</a>, I’m continually learning how things work, from front-end design to server-side logic. Working with React, Express, JavaScript and Node.js has been hugely challenging, but with each app or in-class activity, there is immense satisfaction. I’m excited to build on my skills.</p>
+      <p>As a student of <a id="linkText" href="https://codingbootcamp.northwestern.edu/" target="_blank">web development at Northwestern University</a>, I’m continually learning how things work, from front-end design to server-side logic. Working with React, Express, JavaScript and Node.js has been hugely challenging, but with each app or in-class activity, there is immense satisfaction. I’m excited to build on my skills.</p>
 
-      <p>As a digital editor at <a href="http://wttw.com/chicagotonight" target="_blank">Chicago Tonight at WTTW-Channel 11</a>, I manage a small, driven team of reporters, produce compelling stories for digital platforms, edit and program a news website and — as many in my field do at all hours of the day and night — obsess over metrics.</p>
+      <p>As a digital editor at <a id="linkText" href="http://wttw.com/chicagotonight" target="_blank">Chicago Tonight at WTTW-Channel 11</a>, I manage a small, driven team of reporters, produce compelling stories for digital platforms, edit and program a news website and — as many in my field do at all hours of the day and night — obsess over metrics.</p>
 
       <p>Here, you'll find class projects and homework from the 24-week full-stack web development program at Northwestern. I'll add new projects as I build them.</p>
 
