--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
   <div class="main-shell col-xs-12 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1">
     <div class="main-content col-xs-12">
       <div class="section-header">About Me</div>
-      <img class="img-responsive" src="/assets/images/FB.jpg" alt="Rebecca and Tom">
+      <img class="img-responsive" src="/assets/images/RebeccaCertificate_072917.jpg" alt="Rebecca with Northwestern certificate">
       <p id="download"><b><a id="linkText" href="/assets/resume/RebeccaPalmore_Resume.pdf" download><i class="fa fa-download fa-lg" aria-hidden="true"></i> Download my resume</a></b></p>
       <hr />
       <p>Hi! I'm Rebecca. Thanks for checking out my portfolio. I've been a full-stack web developer since 2017, and a multimedia journalist and editor since 2002.</p>
