new plaudit link

--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -73,7 +73,7 @@
             </div>
             <div class="row">
                 <div class="portfolio col-sm-6 col-md-12">
-                    <a href="https://plaudit.herokuapp.com/" target="_blank"><img class="projects" src="assets/images/plaudit.jpg" alt="Plaudit">
+                    <a href="https://github.com/rpalmore/TeamAllCaps/blob/master/README.md" target="_blank"><img class="projects" src="assets/images/plaudit.jpg" alt="Plaudit">
                         <span>Plaudit</span>  
                     </a>
                 </div>
