updating about page now that i have graduated

--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
 
       <p>Fast-paced newsrooms unwittingly prepared me for computer science, where focus, intense attention to detail and quick problem-solving skills are essential, and a curious mind is what powers that need to look under the hood to try and answer a question that dogs so many of us: <i>How does it work?</i></p>
 
-      <p>As a student of <a id="linkText" href="https://codingbootcamp.northwestern.edu/" target="_blank">web development at Northwestern University</a>, I’m continually learning how things work, from front-end design to server-side logic. Working with React, Express, JavaScript and Node.js has been hugely challenging, but with each app or in-class activity, there is immense satisfaction. I’m excited to build on my skills.</p>
+      <p>As a recent graduate of <a id="linkText" href="https://codingbootcamp.northwestern.edu/" target="_blank">Northwestern University's Coding Bootcamp</a>, I’ve been immersed in learning how things work, from front-end design to server-side logic. Working with React, Express, JavaScript and Node.js&mdash;among other techonologies&mdash;has been hugely challenging, but with each project or in-class activity, there is immense satisfaction. I’m excited to build on my skills, and continue to refine class projects now that the six-month course has ended.</p>
 
       <p>As a digital editor at <a id="linkText" href="http://wttw.com/chicagotonight" target="_blank">Chicago Tonight at WTTW-Channel 11</a>, I manage a small, driven team of reporters, produce compelling stories for digital platforms, edit and program a news website and — as many in my field do at all hours of the day and night — obsess over metrics.</p>
 
