--- a/public/index.html
+++ b/public/index.html
@@ -72,15 +72,15 @@
       <img class="img-responsive" src="/assets/images/RebeccaCertificate_072917.jpg" alt="Rebecca with Northwestern certificate">
       <p id="download"><b><a id="linkText" href="/assets/resume/RebeccaPalmore_Resume.pdf" download><i class="fa fa-download fa-lg" aria-hidden="true"></i> Download my resume</a></b></p>
       <hr />
-      <p>Hi! I'm Rebecca. Thanks for checking out my portfolio. I've been a full-stack web developer since 2017, and a multimedia journalist and editor since 2002.</p>
+      Hi! Im Rebecca. Thanks for checking out my portfolio. I’ve been a full-stack web developer since 2017, and a multimedia journalist and editor since 2002.
 
       <p>Fast-paced newsrooms unwittingly prepared me for computer science, where focus, intense attention to detail and quick problem-solving skills are essential, and a curious mind is what powers that need to look under the hood to try and answer a question that dogs so many of us: <i>How does it work?</i></p>
 
-      <p>As a recent graduate of <a id="linkText" href="https://codingbootcamp.northwestern.edu/" target="_blank">Northwestern University's Coding Bootcamp</a>, I’ve been immersed in learning how things work, from front-end design to server-side logic. Working with React, Express, JavaScript and Node.js&mdash;among other techonologies&mdash;has been hugely challenging, but with each project or in-class activity, there is immense satisfaction. I’m excited to build on my skills, and continue to refine class projects now that the six-month course has ended.</p>
+      <p>As a recent graduate of Northwestern University’s Coding Bootcamp, I’ve been immersed in learning how things work, from front-end design to server-side logic. Working with React, Express, JavaScript and Node.js&mdash;among other techonologies&mdash;has been hugely challenging, but with each project or in-class activity, there is immense satisfaction. I’m excited to build on my skills, and continue to refine class projects now that the bootcamp has ended.</p>
 
-      <p>As a digital editor at <a id="linkText" href="http://wttw.com/chicagotonight" target="_blank">Chicago Tonight at WTTW-Channel 11</a>, I manage a small, driven team of reporters, produce compelling stories for digital platforms, edit and program a news website and — as many in my field do at all hours of the day and night — obsess over metrics.</p>
+      <p>As a digital editor at <a id="linkText" href="http://wttw.com/chicagotonight" target="_blank">Chicago Tonight at WTTW-Channel 11</a>, I manage a small, driven team of reporters, produce compelling stories for digital platforms, edit and program a news website and&mdash;as many in my field do at all hours of the day and night&mdash;obsess over metrics.</p>
 
-      <p>Here, you'll find class projects and homework from the 24-week full-stack web development program at Northwestern. I'll add new projects as I build them.</p>
+      <p>Here, you’ll find class projects and homework from the 24-week full-stack web development program at Northwestern. I'll add new projects as I build them.</p>
 
     </div>
   </div>
