--- a/public/contact.html
+++ b/public/contact.html
@@ -68,7 +68,7 @@
       </a>
     </div>
     <!-- SECONDARY NAV, MOBILE VIEW ONLY -->
-    <div class="mobile-nav visible-xs col-xs-12">
+    <div class="mobile-nav visible-xs text-center col-xs-12">
       <a href="/">
         <div class="links col-sm-4">
           About
@@ -136,6 +136,7 @@
         <a href="https://github.com/rpalmore" target="_blank"><img src="assets/images/logos/github.png" alt="GitHub" width="60" height="60"></a>
         <a href="https://linkedin.com/in/rebecca-palmore" target="_blank"><img src="assets/images/logos/linkedin.png" alt="LinkedIn" width="60" height="60"></a>
         <a href="https://stackoverflow.com/users/7361075/rebecca-palmore" target="_blank"><img src="assets/images/logos/stackoverflow.png" alt="stackoverflow" width="60" height="60"></a>
+        <a href="https://twitter.com/rebeccapalmore" target="_blank"><img src="assets/images/logos/twitter.png" alt="twitter" width="60" height="60"></a>
       </div>
     </div>
     <!-- SIDEBAR ONLY MEDIUM -->
@@ -145,6 +146,7 @@
           <a href="https://github.com/rpalmore" target="_blank"><img src="assets/images/logos/github.png" alt="GitHub" width="60" height="60"></a>
           <a href="https://linkedin.com/in/rebecca-palmore" target="_blank"><img src="assets/images/logos/linkedin.png" alt="LinkedIn" width="60" height="60"></a>
           <a href="https://stackoverflow.com/users/7361075/rebecca-palmore" target="_blank"><img src="assets/images/logos/stackoverflow.png" alt="stackoverflow" width="60" height="60"></a>
+          <a href="https://twitter.com/rebeccapalmore" target="_blank"><img src="assets/images/logos/twitter.png" alt="twitter" width="60" height="60"></a>
         </div>
       </div>
   </div>
