--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/assets/css/font-awesome-4.7.0/css/font-awesome.css">
-  <link href="https://fonts.googleapis.com/css?family=Lobster|Lato:700" rel="stylesheet">  
+  <link href="https://fonts.googleapis.com/css?family=Lobster|Lato:700" rel="stylesheet"> 
   <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
 </head>
 <body>
@@ -28,7 +28,7 @@
       </a>
     </div>
     <!-- SECONDARY NAV, MOBILE VIEW ONLY -->
-    <div class="mobile-nav visible-xs col-xs-12">
+    <div class="mobile-nav visible-xs text-center col-xs-12">
       <a href="/">
         <div class="links col-sm-4">
           About
@@ -85,22 +85,24 @@
     </div>
   </div>
 
-  <!-- SIDEBAR, ALL SIZES BUT MEDIUM -->
-  <div class="panel container-fluid hidden-md col-xs-12 col-lg-3 col-lg-offset-1">
+  <!-- SIDEBAR, X-SMALL AND SMALL SIZES -->
+  <div class="panel container-fluid hidden-md hidden-lg col-xs-12">
     <div class="main-content col-xs-12">
       <div class="sidebar-header">Connect With Me</div>
         <a href="https://github.com/rpalmore" target="_blank"><img src="/assets/images/logos/github.png" alt="GitHub" width="60" height="60"></a>
         <a href="https://linkedin.com/in/rebecca-palmore" target="_blank"><img src="/assets/images/logos/linkedin.png" alt="LinkedIn" width="60" height="60"></a>
         <a href="https://stackoverflow.com/users/7361075/rebecca-palmore" target="_blank"><img src="assets/images/logos/stackoverflow.png" alt="stackoverflow" width="60" height="60"></a>
+        <a href="https://twitter.com/rebeccapalmore" target="_blank"><img src="assets/images/logos/twitter.png" alt="twitter" width="60" height="60"></a>
       </div>
     </div>
-    <!-- SIDEBAR ONLY MEDIUM -->
-    <div class="panel-medium container-fluid visible-md col-md-4 col-md-offset-0">
+    <!-- SIDEBAR, MEDIUM AND LARGE-->
+    <div class="panel-medium container-fluid visible-md visible-lg col-md-4 col-md-offset-0">
       <div class="main-content col-xs-12">
-        <div class="sidebar-header">Connect With Me</div>
+        <div class="sidebar-header text-center">Connect With Me</div>
           <a href="https://github.com/rpalmore" target="_blank"><img src="/assets/images/logos/github.png" alt="GitHub" width="60" height="60"></a>
           <a href="linkedin.com/in/rebecca-palmore" target="_blank"><img src="/assets/images/logos/linkedin.png" alt="LinkedIn" width="60" height="60"></a>
           <a href="https://stackoverflow.com/users/7361075/rebecca-palmore" target="_blank"><img src="/assets/images/logos/stackoverflow.png" alt="stackoverflow" width="60" height="60"></a>
+          <a href="https://twitter.com/rebeccapalmore" target="_blank"><img src="assets/images/logos/twitter.png" alt="twitter" width="60" height="60"></a>
         </div>
       </div>
   </div>
