updating contact, portfolio

--- a/public/contact.html
+++ b/public/contact.html
@@ -129,23 +129,23 @@
     </div>
   </div> 
 
-  <!-- SIDEBAR, ALL SIZES BUT MEDIUM -->
-  <div class="panel container-fluid hidden-md col-xs-12 col-lg-3 col-lg-offset-1">
+  <!-- SIDEBAR, X-SMALL AND SMALL SIZES -->
+  <div class="panel container-fluid hidden-md hidden-lg col-xs-12">
     <div class="main-content col-xs-12">
       <div class="sidebar-header">Connect With Me</div>
-        <a href="https://github.com/rpalmore" target="_blank"><img src="assets/images/logos/github.png" alt="GitHub" width="60" height="60"></a>
-        <a href="https://linkedin.com/in/rebecca-palmore" target="_blank"><img src="assets/images/logos/linkedin.png" alt="LinkedIn" width="60" height="60"></a>
+        <a href="https://github.com/rpalmore" target="_blank"><img src="/assets/images/logos/github.png" alt="GitHub" width="60" height="60"></a>
+        <a href="https://linkedin.com/in/rebecca-palmore" target="_blank"><img src="/assets/images/logos/linkedin.png" alt="LinkedIn" width="60" height="60"></a>
         <a href="https://stackoverflow.com/users/7361075/rebecca-palmore" target="_blank"><img src="assets/images/logos/stackoverflow.png" alt="stackoverflow" width="60" height="60"></a>
         <a href="https://twitter.com/rebeccapalmore" target="_blank"><img src="assets/images/logos/twitter.png" alt="twitter" width="60" height="60"></a>
       </div>
     </div>
-    <!-- SIDEBAR ONLY MEDIUM -->
-    <div class="panel-medium container-fluid visible-md col-md-4 col-md-offset-0">
+    <!-- SIDEBAR, MEDIUM AND LARGE-->
+    <div class="panel-medium container-fluid visible-md visible-lg col-md-4 col-md-offset-0">
       <div class="main-content col-xs-12">
-        <div class="sidebar-header">Connect With Me</div>
-          <a href="https://github.com/rpalmore" target="_blank"><img src="assets/images/logos/github.png" alt="GitHub" width="60" height="60"></a>
-          <a href="https://linkedin.com/in/rebecca-palmore" target="_blank"><img src="assets/images/logos/linkedin.png" alt="LinkedIn" width="60" height="60"></a>
-          <a href="https://stackoverflow.com/users/7361075/rebecca-palmore" target="_blank"><img src="assets/images/logos/stackoverflow.png" alt="stackoverflow" width="60" height="60"></a>
+        <div class="sidebar-header text-center">Connect With Me</div>
+          <a href="https://github.com/rpalmore" target="_blank"><img src="/assets/images/logos/github.png" alt="GitHub" width="60" height="60"></a>
+          <a href="linkedin.com/in/rebecca-palmore" target="_blank"><img src="/assets/images/logos/linkedin.png" alt="LinkedIn" width="60" height="60"></a>
+          <a href="https://stackoverflow.com/users/7361075/rebecca-palmore" target="_blank"><img src="/assets/images/logos/stackoverflow.png" alt="stackoverflow" width="60" height="60"></a>
           <a href="https://twitter.com/rebeccapalmore" target="_blank"><img src="assets/images/logos/twitter.png" alt="twitter" width="60" height="60"></a>
         </div>
       </div>
