--- a/public/index.html
+++ b/public/index.html
@@ -100,7 +100,7 @@
       <div class="main-content col-xs-12">
         <div class="sidebar-header text-center">Connect With Me</div>
           <a href="https://github.com/rpalmore" target="_blank"><img src="/assets/images/logos/github.png" alt="GitHub" width="60" height="60"></a>
-          <a href="linkedin.com/in/rebecca-palmore" target="_blank"><img src="/assets/images/logos/linkedin.png" alt="LinkedIn" width="60" height="60"></a>
+          <a href="https://linkedin.com/in/rebecca-palmore" target="_blank"><img src="/assets/images/logos/linkedin.png" alt="LinkedIn" width="60" height="60"></a>
           <a href="https://stackoverflow.com/users/7361075/rebecca-palmore" target="_blank"><img src="/assets/images/logos/stackoverflow.png" alt="stackoverflow" width="60" height="60"></a>
           <a href="https://twitter.com/rebeccapalmore" target="_blank"><img src="assets/images/logos/twitter.png" alt="twitter" width="60" height="60"></a>
         </div>
