--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -78,7 +78,7 @@
                     </a>
                 </div>
                 <div class="portfolio col-sm-6 col-md-12">
-                    <a href="https://teambooklove.herokuapp.com/" target="_blank"><img class="projects" src="assets/images/booklove.png" alt="Book Love">
+                    <a href="https://github.com/rpalmore/BookLove/blob/master/README.md" target="_blank"><img class="projects" src="assets/images/booklove.png" alt="Book Love">
                         <span>Book Love</span>
                     </a>
                 </div>
