--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,16 @@
 <html lang="en">
 <head>
   <!-- Global Site Tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107275529-1"></script>
+<!--   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107275529-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments)};
     gtag('js', new Date());
 
     gtag('config', 'UA-107275529-1');
-  </script>
-  <title>Rebecca Palmore Portfolio</title>
+  </script> -->
+  <!-- <title>Rebecca Palmore Portfolio</title>
+  <meta name="description" content="Rebecca Palmore is a web developer based in Chicago. This is her professional website. Find her resume, projects, contact information and bio." /> -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/assets/css/font-awesome-4.7.0/css/font-awesome.css">
